--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -225,5 +225,11 @@
     <ClCompile Include="Doit\032_11047_sol.cpp">
       <Filter>소스 파일\Doit\Greedy</Filter>
     </ClCompile>
+    <ClCompile Include="Doit\033_1715.cpp">
+      <Filter>소스 파일\Doit\Greedy</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\033_1715_sol.cpp">
+      <Filter>소스 파일\Doit\Greedy</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
