--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -231,5 +231,11 @@
     <ClCompile Include="Doit\033_1715_sol.cpp">
       <Filter>소스 파일\Doit\Greedy</Filter>
     </ClCompile>
+    <ClCompile Include="Doit\034_1744.cpp">
+      <Filter>소스 파일\Doit\Greedy</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\034_1744_sol.cpp">
+      <Filter>소스 파일\Doit\Greedy</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
