--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -237,5 +237,11 @@
     <ClCompile Include="Doit\034_1744_sol.cpp">
       <Filter>소스 파일\Doit\Greedy</Filter>
     </ClCompile>
+    <ClCompile Include="Doit\035_1931.cpp">
+      <Filter>소스 파일\Doit\Greedy</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\035_1931_sol.cpp">
+      <Filter>소스 파일\Doit\Greedy</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
