--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -270,5 +270,11 @@
     <ClCompile Include="039_1747_sol.cpp">
       <Filter>소스 파일\Doit\Math</Filter>
     </ClCompile>
+    <ClCompile Include="040_1016.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="040_1016_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
