--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="소스 파일\Doit\Math">
       <UniqueIdentifier>{4ada96dc-c4c6-4935-a0e3-89d624a85def}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Doit\Graph">
+      <UniqueIdentifier>{8b0d8329-fa16-4465-9144-4b8e21108680}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Doit\000_2750.cpp">
@@ -305,6 +308,12 @@
     </ClCompile>
     <ClCompile Include="045_21568_sol.cpp">
       <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\046_18352.cpp">
+      <Filter>소스 파일\Doit\Graph</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\046_18352_sol.cpp">
+      <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
