--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -327,5 +327,8 @@
     <ClCompile Include="054_1516_dp.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
+    <ClCompile Include="056_1753.cpp">
+      <Filter>소스 파일\Doit\Graph</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
