--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -330,5 +330,8 @@
     <ClCompile Include="056_1753.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
+    <ClCompile Include="058_1854.cpp">
+      <Filter>소스 파일\Doit\Graph</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
