--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -318,28 +318,28 @@
     <ClCompile Include="Doit\047_1325.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="050_1717.cpp">
+    <ClCompile Include="Doit\050_1717.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="054_1516.cpp">
+    <ClCompile Include="Doit\054_1516.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="054_1516_dp.cpp">
+    <ClCompile Include="Doit\054_1516_dp.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="056_1753.cpp">
+    <ClCompile Include="Doit\056_1753.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="058_1854.cpp">
+    <ClCompile Include="Doit\058_1854.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="059_11657.cpp">
+    <ClCompile Include="Doit\059_11657.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="061_11404.cpp">
+    <ClCompile Include="Doit\061_11404.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="064_1197.cpp">
+    <ClCompile Include="Doit\064_1197.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
   </ItemGroup>
