--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="소스 파일\Doit\Graph">
       <UniqueIdentifier>{8b0d8329-fa16-4465-9144-4b8e21108680}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\BOJ">
+      <UniqueIdentifier>{088003bc-c1b6-4420-99b2-a2a09748c718}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Doit\000_2750.cpp">
@@ -255,60 +258,6 @@
     <ClCompile Include="Doit\036_1541_sol.cpp">
       <Filter>소스 파일\Doit\Greedy</Filter>
     </ClCompile>
-    <ClCompile Include="Doit\037_1929.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="037_1929_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="038_1456.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="038_1456_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="039_1747.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="039_1747_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="040_1016.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="040_1016_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="041_11689.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="041_11689_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="042_1934.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="042_1934_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="043_1850.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="043_1850_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="044_1033.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="044_1033_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="045_21568.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="045_21568_sol.cpp">
-      <Filter>소스 파일\Doit\Math</Filter>
-    </ClCompile>
     <ClCompile Include="Doit\046_18352.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
     </ClCompile>
@@ -341,6 +290,78 @@
     </ClCompile>
     <ClCompile Include="Doit\064_1197.cpp">
       <Filter>소스 파일\Doit\Graph</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ\9613.cpp">
+      <Filter>소스 파일\BOJ</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ\5347.cpp">
+      <Filter>소스 파일\BOJ</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\037_1929.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\037_1929_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\038_1456.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\038_1456_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\039_1747.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\039_1747_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\040_1016.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\040_1016_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\041_11689.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\041_11689_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\042_1934.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\042_1934_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\043_1850.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\043_1850_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\044_1033.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\044_1033_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\045_21568.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Doit\045_21568_sol.cpp">
+      <Filter>소스 파일\Doit\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ\2960.cpp">
+      <Filter>소스 파일\BOJ</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ\1747.cpp">
+      <Filter>소스 파일\BOJ</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ\21920.cpp">
+      <Filter>소스 파일\BOJ</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ\3474.cpp">
+      <Filter>소스 파일\BOJ</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
